--- a/meta/output/GridTest.safari.cache.html
+++ b/meta/output/GridTest.safari.cache.html
@@ -22193,7 +22193,11 @@ $pyjs['loaded_modules']['GridTest'] = function (__mod_name__) {
 	$m['Window'] = $p['___import___']('pyjamas.Window', null, null, false);
 	$m['logging'] = $p['___import___']('pyjamas.logging', null, null, false);
 	$m['log'] = $m['logging']['getConsoleLogger']();
-	$p['__import_all__']('learning', null, $m, null, false);
+	$m['State'] = $p['___import___']('learning.State', null, null, false);
+	$m['ab'] = $p['___import___']('learning.ab', null, null, false);
+	$m['isWin'] = $p['___import___']('learning.isWin', null, null, false);
+	$m['isFull'] = $p['___import___']('learning.isFull', null, null, false);
+	$m['turn'] = $p['___import___']('learning.turn', null, null, false);
 	$m['GridWidget'] = (function(){
 		var $cls_definition = new Object();
 		var $method;
@@ -22215,11 +22219,17 @@ $pyjs['loaded_modules']['GridTest'] = function (__mod_name__) {
 			self['g']['setCellSpacing'](1);
 			self['init']();
 			self['add']($p['getattr'](self, 'g'));
-			self['state'] = (typeof State == "undefined"?$m['State']:State)();
+			self['state'] = $m['State']();
+			$p['getattr']($p['getattr'](self, 'state'), 'boards')['__getitem__'](1)['__getitem__'](0)['__getitem__'](1)['__getitem__'](0)['__setitem__']('cell', 1);
+			$p['getattr']($p['getattr'](self, 'state'), 'boards')['__getitem__'](0)['__getitem__'](2)['__getitem__'](0)['__getitem__'](2)['__setitem__']('cell', 2);
+			self['state_to_grid']();
 			g = self['g']['getWidget'](0, 0);
 			g['setText'](0, 0, '1');
 			self['grid_to_state']();
 			self['state_to_grid']();
+			self['max_player'] = '-1';
+			self['min_player'] = '-1';
+			self['TD_CONSTS'] = $p['dict']([['c3', 0.959929382365], ['c2', 1.31181409453], ['c1', 3.84254784335], ['c6', 0.276028825304], ['c5', 0.352353456397], ['c4', 0.757326398055]]);
 			return null;
 		}
 	, 1, [null,null,['self']]);
@@ -22231,31 +22241,38 @@ $pyjs['loaded_modules']['GridTest'] = function (__mod_name__) {
 				var self = arguments[0];
 				sender = arguments[1];
 			}
-			var $and1,p,$and2,next_state;
+			var g,point,$and1,$and2;
 			if ($p['bool'](($p['bool']($and1=$p['hasattr'](self, 'ai_first'))?$p['op_eq'](sender, $p['getattr'](self, 'ai_first')):$and1))) {
-				$p['getattr'](self, 'state')['max_v'] = 1;
-				$p['getattr'](self, 'state')['min_v'] = 2;
+				self['max_player'] = '1';
+				self['min_player'] = '2';
 				self['remove']($p['getattr'](self, 'ai_first'));
 				$p['delattr'](self, 'ai_first');
 				$p['printFunc'](['button ai_first exists', $p['hasattr'](self, 'ai_first')], 1);
 				self['state']['print_me']();
-				next_state = (typeof ab == "undefined"?$m['ab']:ab)($p['getattr'](self, 'state'));
-				self['state_to_grid'](next_state);
+				self['state'] = $pyjs_kwargs_call(null, $m['ab'], null, null, [{'optional_args':$p['dict']([['TD_CONSTS', $p['getattr'](self, 'TD_CONSTS')], ['MIN', $p['getattr'](self, 'min_player')], ['MAX', $p['getattr'](self, 'max_player')]])}, $p['getattr'](self, 'state'), $p['getattr'](self, 'TD_CONSTS'), false]);
+				self['state_to_grid']((typeof next_state == "undefined"?$m['next_state']:next_state));
 			}
 			else {
 				if ($p['bool']($p['hasattr'](self, 'ai_first'))) {
 					$p['printFunc'](['Setting state.max_v'], 1);
-					$p['getattr'](self, 'state')['max_v'] = 2;
-					$p['getattr'](self, 'state')['min_v'] = 1;
+					self['max_player'] = '2';
+					self['min_player'] = '1';
+					$p['printFunc'](['hi1'], 1);
 					self['remove']($p['getattr'](self, 'ai_first'));
+					$p['delattr'](self, 'ai_first');
+					$p['printFunc'](['hi2'], 1);
 				}
-				p = $p['getattr'](sender, 'point');
-				self['g']['setText'](p['__getitem__']('y'), p['__getitem__']('x'), $p['str']($p['getattr']($p['getattr'](self, 'state'), 'min_v')));
-				self['state'] = self['grid_to_state']();
-				$p['getattr'](self, 'state')['player'] = (typeof next_player == "undefined"?$m['next_player']:next_player)($p['getattr']($p['getattr'](self, 'state'), 'player'));
-				self['state']['print_me']();
-				next_state = (typeof ab == "undefined"?$m['ab']:ab)($p['getattr'](self, 'state'));
-				self['state_to_grid'](next_state);
+				if (!( $p['getattr']($p['getattr'](self, 'state'), 'boards') )) {
+				   throw $p['AssertionError']();
+				 }
+				point = $p['getattr'](sender, 'point');
+				g = self['g']['getWidget'](point['__getitem__']('y_board'), point['__getitem__']('x_board'));
+				g['setText'](point['__getitem__']('y_cell'), point['__getitem__']('x_cell'), $p['str']($p['getattr'](self, 'min_player')));
+				self['grid_to_state']();
+				$p['printFunc'](['yes'], 1);
+				self['state']['printInfo']();
+				self['state'] = $pyjs_kwargs_call(null, $m['ab'], null, null, [{'optional_args':$p['dict']([['TD_CONSTS', $p['getattr'](self, 'TD_CONSTS')], ['MIN', $p['getattr'](self, 'min_player')], ['MAX', $p['getattr'](self, 'max_player')]])}, $p['getattr'](self, 'state'), $p['getattr'](self, 'TD_CONSTS'), false])['__getitem__'](1);
+				self['state_to_grid']();
 			}
 			return null;
 		}
@@ -22273,10 +22290,10 @@ $pyjs['loaded_modules']['GridTest'] = function (__mod_name__) {
 			board = $p['getattr']($p['getattr'](self, 'state'), 'boards');
 			piece = $p['getattr']($p['getattr'](self, 'state'), 'nextPiece');
 			playable = true;
-			if ($p['bool'](($p['bool']($or1=(typeof isWin == "undefined"?$m['isWin']:isWin)(board['__getitem__'](piece['__getitem__'](0))['__getitem__'](piece['__getitem__'](1))))?$or1:(typeof isFull == "undefined"?$m['isFull']:isFull)(board['__getitem__'](piece['__getitem__'](0))['__getitem__'](piece['__getitem__'](1)))))) {
+			if ($p['bool'](($p['bool']($or1=$m['isWin'](board['__getitem__'](piece['__getitem__'](0))['__getitem__'](piece['__getitem__'](1))))?$or1:$m['isFull'](board['__getitem__'](piece['__getitem__'](0))['__getitem__'](piece['__getitem__'](1)))))) {
 				playable = false;
 			}
-			if ($p['bool'](($p['bool']($and3=!$p['bool']((typeof isWin == "undefined"?$m['isWin']:isWin)(board['__getitem__'](y_board)['__getitem__'](x_board))))?!$p['bool']((typeof isFull == "undefined"?$m['isFull']:isFull)(board['__getitem__'](y_board)['__getitem__'](x_board))):$and3))) {
+			if ($p['bool'](($p['bool']($and3=!$p['bool']($m['isWin'](board['__getitem__'](y_board)['__getitem__'](x_board))))?!$p['bool']($m['isFull'](board['__getitem__'](y_board)['__getitem__'](x_board))):$and3))) {
 				if ($p['bool'](!$p['bool'](playable))) {
 					return true;
 				}
@@ -22381,12 +22398,12 @@ $pyjs['loaded_modules']['GridTest'] = function (__mod_name__) {
 								if ($p['bool']($p['op_eq']($p['getattr']($p['getattr'](self, 'state'), 'boards')['__getitem__'](y_board)['__getitem__'](x_board)['__getitem__'](y_cell)['__getitem__'](x_cell)['__getitem__']('cell'), 0))) {
 									$p['getattr']($p['getattr'](self, 'state'), 'boards')['__getitem__'](y_board)['__getitem__'](x_board)['__getitem__'](y_cell)['__getitem__'](x_cell)['__setitem__']('cell', $p['str'](g['getText'](y_cell, x_cell)));
 									piece = $p['getattr']($p['getattr'](self, 'state'), 'nextPiece');
-									if ($p['bool']((typeof isWin == "undefined"?$m['isWin']:isWin)($p['getattr']($p['getattr'](self, 'state'), 'boards')['__getitem__'](piece['__getitem__'](0))['__getitem__'](piece['__getitem__'](1))))) {
+									if ($p['bool']($m['isWin']($p['getattr']($p['getattr'](self, 'state'), 'boards')['__getitem__'](piece['__getitem__'](0))['__getitem__'](piece['__getitem__'](1))))) {
 										var $augsub1 = $p['str'](piece['__getitem__'](2));
 										var $augexpr1 = $p['getattr']($p['getattr'](self, 'state'), 'score');
 										$augexpr1['__setitem__']($augsub1, $p['__op_add']($add1=$augexpr1['__getitem__']($augsub1),$add2=1));
 									}
-									piece['__setitem__'](2, $p['__op_add']($add3=piece['__getitem__'](2),$add4=(typeof turn == "undefined"?$m['turn']:turn)(piece['__getitem__'](2))));
+									piece['__setitem__'](2, $p['__op_add']($add3=piece['__getitem__'](2),$add4=$m['turn'](piece['__getitem__'](2))));
 									piece['__setitem__'](0, y_cell);
 									piece['__setitem__'](1, x_cell);
 								}
@@ -22472,7 +22489,7 @@ $pyjs['loaded_modules']['GridTest'] = function (__mod_name__) {
 
 
 /*
-PYJS_DEPS: ['pyjd', 'pyjamas.ui.Button.Button', 'pyjamas', 'pyjamas.ui', 'pyjamas.ui.Button', 'pyjamas.ui.RootPanel.RootPanel', 'pyjamas.ui.RootPanel', 'pyjamas.ui.Label.Label', 'pyjamas.ui.Label', 'pyjamas.ui.Grid.Grid', 'pyjamas.ui.Grid', 'pyjamas.ui.CellFormatter.CellFormatter', 'pyjamas.ui.CellFormatter', 'pyjamas.ui.RowFormatter.RowFormatter', 'pyjamas.ui.RowFormatter', 'pyjamas.ui.HTML.HTML', 'pyjamas.ui.HTML', 'pyjamas.ui.CheckBox.CheckBox', 'pyjamas.ui.CheckBox', 'pyjamas.ui.AbsolutePanel.AbsolutePanel', 'pyjamas.ui.AbsolutePanel', 'pyjamas.Window', 'pyjamas.logging', 'learning']
+PYJS_DEPS: ['pyjd', 'pyjamas.ui.Button.Button', 'pyjamas', 'pyjamas.ui', 'pyjamas.ui.Button', 'pyjamas.ui.RootPanel.RootPanel', 'pyjamas.ui.RootPanel', 'pyjamas.ui.Label.Label', 'pyjamas.ui.Label', 'pyjamas.ui.Grid.Grid', 'pyjamas.ui.Grid', 'pyjamas.ui.CellFormatter.CellFormatter', 'pyjamas.ui.CellFormatter', 'pyjamas.ui.RowFormatter.RowFormatter', 'pyjamas.ui.RowFormatter', 'pyjamas.ui.HTML.HTML', 'pyjamas.ui.HTML', 'pyjamas.ui.CheckBox.CheckBox', 'pyjamas.ui.CheckBox', 'pyjamas.ui.AbsolutePanel.AbsolutePanel', 'pyjamas.ui.AbsolutePanel', 'pyjamas.Window', 'pyjamas.logging', 'learning.State', 'learning', 'learning.ab', 'learning.isWin', 'learning.isFull', 'learning.turn']
 */
 
 --></script>
@@ -28122,11 +28139,17 @@ $pyjs['loaded_modules']['learning'] = function (__mod_name__) {
 
 	$m['getWin']['__bind_type__'] = 0;
 	$m['getWin']['__args__'] = [null,null,['state']];
-	$m['ab'] = function(state, constants, sub) {
+	$m['ab'] = function(state, constants, sub, optional_args) {
+		if (typeof optional_args == 'undefined') optional_args=arguments['callee']['__args__'][5][1];
 		var $add74,nextState,duration,$$new,farthestDepth,$add73;
+		if ($p['bool']((typeof option_args == "undefined"?$m['option_args']:option_args))) {
+			$m['TD_CONSTS'] = optional_args['__getitem__']('TD_CONSTS');
+			$m['MIN'] = optional_args['__getitem__']('MIN');
+			$m['MAX'] = optional_args['__getitem__']('MAX');
+		}
 		farthestDepth = 1;
 		duration = 0;
-		while ($p['bool'](($p['cmp'](farthestDepth, 4) == -1))) {
+		while ($p['bool'](($p['cmp'](farthestDepth, 3) == -1))) {
 			$$new = (typeof State == "undefined"?$m['State']:State)();
 			$$new['copyThis'](state);
 			nextState = $m['maxH']($$new, 0, farthestDepth, (typeof Util == "undefined"?$m['Util']:Util)((typeof ($usub10=9005.0)=='number'?
@@ -28139,7 +28162,7 @@ $pyjs['loaded_modules']['learning'] = function (__mod_name__) {
 	$m['ab']['__name__'] = 'ab';
 
 	$m['ab']['__bind_type__'] = 0;
-	$m['ab']['__args__'] = [null,null,['state'],['constants'],['sub']];
+	$m['ab']['__args__'] = [null,null,['state'],['constants'],['sub'],['optional_args', $p['dict']([])]];
 	$m['turn'] = function(integer) {
 
 		if ($p['bool']($p['op_eq'](integer, 1))) {
