--- a/meta/Meta.html
+++ b/meta/Meta.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-        <meta name="pygwt:module" content="GridTest">
-        <title>GridTest</title>
+        <meta name="pygwt:module" content="Meta">
+        <title>Meta</title>
     </head>
-    <body bgcolor="white">
+    <body>
         <script language="javascript" src="bootstrap.js"></script>
     </body>
 </html>
